<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/backBtn"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/loginLinear"
        android:layout_width="0dp"
        android:layout_height="480dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/NUSHLogo"
            android:layout_width="match_parent"
            android:layout_height="222dp"
            android:paddingBottom="70dp"
            app:srcCompat="@drawable/nhs" />

        <Button
            android:id="@+id/adminBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adminBtnText" />

        <Button
            android:id="@+id/guestBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guestBtnText" />
    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/votingPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="76dp"
        android:text="@string/votingPrompt"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="0dp"
        android:layout_height="530dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/votingPrompt">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:gravity="center_horizontal">

            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/adminLinear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/votingPrompt">

        <EditText
            android:id="@+id/candNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/candNameHint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/candDescText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/candDescHint"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/candBtn"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:text="@string/candBtn" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>